# spokenlm-phoneme

./: .gitignore  README.md  pyproject.toml
assets/: wer.pkl
results/: abx.csv  mcd.csv  slm.csv  wer.csv
scripts/: launch_job.sh  launch_parallel.sh  paper_figures.ipynb
src/phonslm/: __init__.py  abx.py  data.py  evaluate.py  features.py  headers.py  mcd.py  model.py  reader.py  resynthesis_codes.py  train.py  train_ctc.py  units.py  utils.py
